--- a/room_first.html
+++ b/room_first.html
@@ -9,14 +9,21 @@
 		<!-- Boby -->
 		<section id="banner3">
 			<div id ="content" class="base_container">
-				<div id ="intro_container"></div>
-				<div id ="start_container"></div>
+				<div id ="room_container"></div>
+				<div id ="item_container"></div>
 			</div>
 
+
+			<!--bottom_section-->
+			<div id="bottom_section_id" class="bottom_section">
+				<img src="images/leaderboard.png" style="width: 100%; height: 100%;"/>
+			</div>
 		</section>
 
 
 		
+
+
 		<!-- Footer -->
 		<div class="footer">
 			<p>&copy; 2024 PROJECT by NJ, Version 1.0</p>
@@ -24,4 +31,4 @@
 
 
 		<!-- Scripts -->
-		<script src="assets/js/index.js"></script></body></html>
+		<script src="assets/js/main.js"></script><script src="assets/js/index.js"></script></body></html>
