--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
 		<!-- Boby -->
 		<section id="banner3">
 			<div id ="content" class="base_container">
-				<div id ="intro_container"></div>
+				<img id ="intro_container" src="images/bg_intro1.png"></img>
 				<div id ="start_container"></div>
 			</div>
 
 		</section>
-
 
 		
 		<!-- Footer -->
