--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 		<!-- Boby -->
 		<section id="banner3">
 			<div id ="content" class="base_container">
+				<img id = "dark" src="images/dark.png">
 				<img id ="intro_container" src="images/bg_intro1.png"></img>
-				<div id ="start_container"></div>
+				<img id = "start_bt" src="images/start.png">
+				
 			</div>
 
 		</section>
