--- a/room_first.html
+++ b/room_first.html
@@ -1,16 +1,13 @@
 <!DOCTYPE HTML>
-<html><head><title>백호돌이 괴담 by NJ</title><meta charset="utf-8"><meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="assets/css/main.css"></head><body>
-
-		<!-- Header -->
-		<header id="header" class="alt"><div class="logo"><img src="images/logo.png" width="120" height="40" alt="Project_04 by NJ"></div>
-		</header>
+<html><head><title>백호돌이 방탈출 by NJ</title><meta charset="utf-8"><meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="assets/css/main.css"></head><body>
 
 
 		<!-- Boby -->
 		<section id="banner3">
 			<div id ="content" class="base_container">
-				<div id ="room_container"></div>
+				<img id = "room_container" src="images/room1.png"></img>
 				<div id ="item_container"></div>
+
 			</div>
 
 
