--- a/room_first.html
+++ b/room_first.html
@@ -13,7 +13,7 @@
 
 			<!--bottom_section-->
 			<div id="bottom_section_id" class="bottom_section">
-				<img src="images/leaderboard.png" style="width: 100%; height: 100%;"/>
+				<img src="images/bottom.png" style="width: 100%; height: 100%;"/>
 			</div>
 		</section>
 
