--- a/room_first.html
+++ b/room_first.html
@@ -28,4 +28,4 @@
 
 
 		<!-- Scripts -->
-		<script src="assets/js/main.js"></script><script src="assets/js/index.js"></script></body></html>
+		<script src="assets/js/room1.js"></script></body></html>
