--- a/room_first.html
+++ b/room_first.html
@@ -5,10 +5,24 @@
 		<!-- Boby -->
 		<section id="banner3">
 			<div id ="content" class="base_container">
-				<img id = "room_container" src="images/room1.png"></img>
-				<div id ="item_container"></div>
+				<img id = "room_container" src="images/room1.png">
+				<div id ="item_container">
+					<img id = "item_1">
+					<img id = "item_2">
+					<img id = "item_3">
+					<img id = "item_4">
+				</div>
+					
 
+
+
+				<img id = "return_img" src="images/return.png">
+				<img id = "hammer_bg" src="images/hammer_bg.png">
+				<img id = "memo_bg" src="images/memo_bg.png">
+			
 			</div>
+
+
 
 
 			<!--bottom_section-->
