--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 		<!-- Boby -->
 		<section id="banner3">
 			<div id ="content" class="base_container">
-				<img id = "dark" src="images/dark.png"></img>
-				<img id ="intro_container" src="images/bg_intro1.png"></img>
-				<img id = "start_bt" src="images/start.png"></img>
+				<img id = "dark" src="images/dark.png">
+				<img id ="intro_container" src="images/bg_intro1.png">
+				<img id = "start_bt" src="images/start.png">
 				<div id = "warning_container"></div>
 			</div>
 
