--- a/room_first.html
+++ b/room_first.html
@@ -7,18 +7,22 @@
 			<div id ="content" class="base_container">
 				<img id = "room_container" src="images/room1.png">
 				<div id ="item_container">
-					<img id = "item_1">
-					<img id = "item_2">
-					<img id = "item_3">
-					<img id = "item_4">
+					<img id = "item_1" src="images/sample.png">
+					<img id = "item_2" src="images/sample.png">
+					<img id = "item_3" src="images/sample.png">
+					<img id = "item_4" src="images/sample.png">
 				</div>
 					
 
-
-
+				<!--item & background-->
+				<img id = "dark2" src="images/dark.png">
 				<img id = "return_img" src="images/return.png">
 				<img id = "hammer_bg" src="images/hammer_bg.png">
-				<img id = "memo_bg" src="images/memo_bg.png">
+				<img id = "memo_bg_red" src="images/memo_bg_red.png">
+				<img id = "towel_min" src="images/towel_min.png">
+				<img id = "switch_Off" src="images/switch_Off.png">
+				<img id = "memo_red" src="images/memo_red.png">
+				<img id = "memo_blue" src="images/memo_blue.png">
 			
 			</div>
 
