--- a/room_first.html
+++ b/room_first.html
@@ -19,10 +19,19 @@
 				<img id = "return_img" src="images/return.png">
 				<img id = "hammer_bg" src="images/hammer_bg.png">
 				<img id = "memo_bg_red" src="images/memo_bg_red.png">
+				<img id = "memo_bg_blue" src="images/memo_bg_blue.png">
 				<img id = "towel_min" src="images/towel_min.png">
 				<img id = "switch_Off" src="images/switch_Off.png">
 				<img id = "memo_red" src="images/memo_red.png">
 				<img id = "memo_blue" src="images/memo_blue.png">
+				<img id = "tile" src="images/tile.png">
+				<img id = "light" src="images/light.png">
+				<img id = "safe" src="images/safe.png">
+				<div id = "safe_number"></div>
+				<img id = "key" src="images/key.png">
+				<img id = "glass" src="images/glass.png">
+				<img id = "success" src="images/success.png">
+				<img id = "gotomain" src="images/gotomain.png">
 			
 			</div>
 
@@ -31,7 +40,7 @@
 
 			<!--bottom_section-->
 			<div id="bottom_section_id" class="bottom_section">
-				<img src="images/bottom.png" style="width: 100%; height: 100%;"/>
+				<img id= "bottom_img" src="images/bottom.png" style="width: 100%; height: 100%;"/>
 			</div>
 		</section>
 
