--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 				<img id ="intro_container" src="images/bg_intro1.png">
 				<img id = "start_bt" src="images/start.png">
 				<div id = "warning_container"></div>
+
+				<div id = "loading">
+					<img id = running src="images/running.gif">
+					<div id = "loading_text">loading...</div>
+				</div>
 			</div>
 
 			
