--- a/room_first.html
+++ b/room_first.html
@@ -33,6 +33,13 @@
 				<img id = "success" src="images/success.png">
 				<img id = "gotomain" src="images/gotomain.png">
 			
+
+
+				<!--preload-->
+				<div id = "loading">
+					<img id = running src="images/running.gif">
+					<div id = "loading_text">loading...</div>
+				</div>
 			</div>
 
 
