--- a/room_first.html
+++ b/room_first.html
@@ -2,6 +2,22 @@
 <html><head><title>백호돌이 방탈출 by NJ</title><meta charset="utf-8"><meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="assets/css/main.css"></head><body>
 
 
+		<!--image Preload_section-->
+		<img src="images/room1-1.png" style="display: none;" />
+		<img src="images/room1-2.png" style="display: none;" />
+		<img src="images/room1-2-1.png" style="display: none;" />
+		<img src="images/room1-3.png" style="display: none;" />
+		<img src="images/room1-3-1.png" style="display: none;" />
+		<img src="images/room1-3-2.png" style="display: none;" />
+		<img src="images/room1-3-3.png" style="display: none;" />
+		<img src="images/room1-4.png" style="display: none;" />
+		<img src="images/hammer_bg.png" style="display: none;" />
+		<img src="images/bottom_success.png" style="display: none;" />
+		<img src="images/safe_open.png" style="display: none;" />
+		<img src="images/hammer_item.png" style="display: none;" />
+		<img src="images/safe.png" style="display: none;" />
+		<img src="images/success.png" style="display: none;" />
+
 		<!-- Boby -->
 		<section id="banner3">
 			<div id ="content" class="base_container">
