--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
 		</header>
 
 
+
+
+		<!--image Preload_section-->
+		<img src="images/bottom.png" style="display: none;" />
+		<img src="images/bg_intro1.png" style="display: none;" />
+		<img src="images/bg_intro2.png" style="display: none;" />
+
+
 		<!-- Boby -->
 		<section id="banner3">
 			<div id ="content" class="base_container">
