--- a/room_first.html
+++ b/room_first.html
@@ -17,6 +17,8 @@
 		<img src="images/hammer_item.png" style="display: none;" />
 		<img src="images/safe.png" style="display: none;" />
 		<img src="images/success.png" style="display: none;" />
+		<img src="images/ending.gif" style="display: none;" />
+		<img src="images/exit.png" style="display: none;" />
 
 		<!-- Boby -->
 		<section id="banner3">
@@ -48,6 +50,7 @@
 				<img id = "glass" src="images/glass.png">
 				<img id = "success" src="images/success.png">
 				<img id = "gotomain" src="images/gotomain.png">
+				<img id = "exit" src="images/exit.png">
 			
 
 
