--- a/room_first.html
+++ b/room_first.html
@@ -16,9 +16,9 @@
 		<img src="images/safe_open.png" style="display: none;" />
 		<img src="images/hammer_item.png" style="display: none;" />
 		<img src="images/safe.png" style="display: none;" />
-		<img src="images/success.png" style="display: none;" />
 		<img src="images/ending.gif" style="display: none;" />
 		<img src="images/exit.png" style="display: none;" />
+		<img src="images/tobecontinued.png" style="display: none;" />
 
 		<!-- Boby -->
 		<section id="banner3">
@@ -33,6 +33,7 @@
 					
 
 				<!--item & background-->
+				<img id = "masking" src="images/dark.png">
 				<img id = "dark2" src="images/dark.png">
 				<img id = "return_img" src="images/return.png">
 				<img id = "hammer_bg" src="images/hammer_bg.png">
@@ -48,9 +49,9 @@
 				<div id = "safe_number"></div>
 				<img id = "key" src="images/key.png">
 				<img id = "glass" src="images/glass.png">
-				<img id = "success" src="images/success.png">
 				<img id = "gotomain" src="images/gotomain.png">
 				<img id = "exit" src="images/exit.png">
+				<img id = "finish" src="images/tobecontinued.png">
 			
 
 
