--- a/room_first.html
+++ b/room_first.html
@@ -19,6 +19,10 @@
 		<img src="images/ending.gif" style="display: none;" />
 		<img src="images/exit.png" style="display: none;" />
 		<img src="images/tobecontinued.png" style="display: none;" />
+		<img src="images/hint_1.png" style="display: none;" />
+		<img src="images/hint_2.png" style="display: none;" />
+		<img src="images/hint_3.png" style="display: none;" />
+		<img src="images/hint_icon.png" style="display: none;" />
 
 		<!-- Boby -->
 		<section id="banner3">
@@ -52,6 +56,7 @@
 				<img id = "gotomain" src="images/gotomain.png">
 				<img id = "exit" src="images/exit.png">
 				<img id = "finish" src="images/tobecontinued.png">
+				
 			
 
 
@@ -68,6 +73,7 @@
 			<!--bottom_section-->
 			<div id="bottom_section_id" class="bottom_section">
 				<img id= "bottom_img" src="images/bottom.png" style="width: 100%; height: 100%;"/>
+				<img id = "hint_icon" src="images/hint_icon.png">
 			</div>
 		</section>
 
