--- a/room_second.html
+++ b/room_second.html
@@ -4,6 +4,8 @@
 
 		<!--image Preload_section-->
 		<img src="images/room2-1.png" style="display: none;" />
+		<img src="images/room2-2.png" style="display: none;" />
+		<img src="images/room2-3.png" style="display: none;" />
 		<img src="images/hint_icon.png" style="display: none;" />
 
 		<!-- Boby -->
@@ -20,6 +22,12 @@
 
 				<!--item & background-->
 				<img id = "return_img" src="images/return.png">
+				<img id = "cover_large" src="images/cover_large.png">
+				<img id = "cover_small" src="images/cover_small.png">
+				<img id = "driver_bg" src="images/driver_bg.png">
+				<img id = "driver_item" src="images/driver_item.png">
+				<img id = "line_cut" src="images/line_cut.png">
+				<img id = "line_cut_small" src="images/line_cut_small.png">
 
 
 				<!--preload-->
