--- a/room_second.html
+++ b/room_second.html
@@ -7,11 +7,19 @@
 		<img src="images/room2-2.png" style="display: none;" />
 		<img src="images/room2-3.png" style="display: none;" />
 		<img src="images/hint_icon.png" style="display: none;" />
+		<img src="images/room2-1_inner.png" style="display: none;" />
+		<img src="images/door_left.png" style="display: none;" />
+		<img src="images/door_right.png" style="display: none;" />
 
 		<!-- Boby -->
 		<section id="banner3">
 			<div id ="content" class="base_container">
 				<img id = "room_container" src="images/room2-1.png">
+				<img id = "room2-1_inner" src="images/room2-1_inner.png"> 
+				<img id = "room2-1_inner_bg" src="images/room2-1_inner_bg.png"> 
+				<img id = "door_left" src="images/door_left.png">
+				<img id = "door_right" src="images/door_right.png">
+
 				<div id ="item_container">
 					<img id = "item_1" src="images/sample.png">
 					<img id = "item_2" src="images/sample.png">
@@ -28,6 +36,18 @@
 				<img id = "driver_item" src="images/driver_item.png">
 				<img id = "line_cut" src="images/line_cut.png">
 				<img id = "line_cut_small" src="images/line_cut_small.png">
+				<img id = "crowbar" src="images/crowbar.png">
+				<img id = "line_item" src="images/line_item.png">
+				<img id = "lever_up" src="images/lever_up.png">
+				<img id = "lever_down" src="images/lever_down.png">
+				<img id = "cable1" src="images/1.png">
+				<img id = "cable2" src="images/2.png">
+				<img id = "cable4" src="images/4.png">
+				<img id = "cable5" src="images/5.png">
+				<img id = "cable6" src="images/6.png">
+				<img id = "cable7" src="images/7.png">
+				<img id = "cable8" src="images/8.png">
+				<img id = "cable9" src="images/9.png">
 
 
 				<!--preload-->
