--- a/room_second.html
+++ b/room_second.html
@@ -6,10 +6,7 @@
 		<img src="images/room2-1.png" style="display: none;" />
 		<img src="images/room2-2.png" style="display: none;" />
 		<img src="images/room2-3.png" style="display: none;" />
-		<img src="images/hint_icon.png" style="display: none;" />
 		<img src="images/room2-1_inner.png" style="display: none;" />
-		<img src="images/door_left.png" style="display: none;" />
-		<img src="images/door_right.png" style="display: none;" />
 
 		<!-- Boby -->
 		<section id="banner3">
@@ -48,7 +45,10 @@
 				<img id = "cable7" src="images/7.png">
 				<img id = "cable8" src="images/8.png">
 				<img id = "cable9" src="images/9.png">
-
+				<img id = "pass_lever_light" src="images/pass_lever_light.png">
+				<img id = "pass_lever" src="images/pass_lever.png">
+				<img id = "close" src="images/close.png">
+				
 
 				<!--preload-->
 				<div id = "loading">
