--- a/room_second.html
+++ b/room_second.html
@@ -37,6 +37,7 @@
 				<img id = "line_item" src="images/line_item.png">
 				<img id = "lever_up" src="images/lever_up.png">
 				<img id = "lever_down" src="images/lever_down.png">
+				<img id = "lever_light" src="images/lever_light.gif">
 				<img id = "cable1" src="images/1.png">
 				<img id = "cable2" src="images/2.png">
 				<img id = "cable4" src="images/4.png">
@@ -46,8 +47,14 @@
 				<img id = "cable8" src="images/8.png">
 				<img id = "cable9" src="images/9.png">
 				<img id = "pass_lever_light" src="images/pass_lever_light.png">
+				
 				<img id = "pass_lever" src="images/pass_lever.png">
 				<img id = "close" src="images/close.png">
+				<img id = "spark" src="images/spark.png">
+				<div id = "pass1">0</div>
+				<div id = "pass2">0</div>
+				<div id = "pass3">0</div>
+				<div id = "pass4">0</div>
 				
 
 				<!--preload-->
