--- a/room_second.html
+++ b/room_second.html
@@ -7,6 +7,8 @@
 		<img src="images/room2-2.png" style="display: none;" />
 		<img src="images/room2-3.png" style="display: none;" />
 		<img src="images/room2-1_inner.png" style="display: none;" />
+		<img src="images/room2-4.png" style="display: none;" />
+		
 
 		<!-- Boby -->
 		<section id="banner3">
@@ -47,7 +49,6 @@
 				<img id = "cable8" src="images/8.png">
 				<img id = "cable9" src="images/9.png">
 				<img id = "pass_lever_light" src="images/pass_lever_light.png">
-				
 				<img id = "pass_lever" src="images/pass_lever.png">
 				<img id = "close" src="images/close.png">
 				<img id = "spark" src="images/spark.png">
@@ -55,7 +56,12 @@
 				<div id = "pass2">0</div>
 				<div id = "pass3">0</div>
 				<div id = "pass4">0</div>
-				
+				<img id = "cctv_before" src="images/cctv_before.png">
+				<img id = "nipper_bg" src="images/nipper_bg.png">
+				<img id = "nipper" src="images/nipper_item.png">
+				<img id = "floor" src="images/floor.png">
+				<img id = "light_1" src="images/light_1.png">
+				<img id = "masking" src="images/dark.png">
 
 				<!--preload-->
 				<div id = "loading">
