--- a/room_first.html
+++ b/room_first.html
@@ -53,7 +53,7 @@
 				<div id = "safe_number"></div>
 				<img id = "key" src="images/key.png">
 				<img id = "glass" src="images/glass.png">
-				<img id = "gotomain" src="images/gotomain.png">
+				<img id = "gotonext" src="images/gotonext.png">
 				<img id = "exit" src="images/exit.png">
 				<img id = "finish" src="images/tobecontinued.png">
 				
