--- a/room_second.html
+++ b/room_second.html
@@ -8,6 +8,11 @@
 		<img src="images/room2-3.png" style="display: none;" />
 		<img src="images/room2-1_inner.png" style="display: none;" />
 		<img src="images/room2-4.png" style="display: none;" />
+		<img src="images/hint_4.png" style="display: none;" />
+		<img src="images/hint_5.png" style="display: none;" />
+		<img src="images/hint_6.png" style="display: none;" />
+		<img src="images/bottom_success2.png" style="display: none;" />
+		<img src="images/ending2.gif" style="display: none;" />
 		
 
 		<!-- Boby -->
@@ -62,6 +67,25 @@
 				<img id = "floor" src="images/floor.png">
 				<img id = "light_1" src="images/light_1.png">
 				<img id = "masking" src="images/dark.png">
+				<img id = "finish" src="images/tobecontinued.png">
+				<img id = "gotomain" src="images/gotomain.png">
+
+
+				<!--TouchPad Game-->
+				<div id = touchpad_container>
+					<img id = "krun_intro" src="images/krun_intro.gif">
+					<img id = "bg_river" src="images/river.png">
+					<img id = "bg_road" src="images/road.png">
+					<img id = "running_tiger" src="images/running.gif" />
+					<img id = "hurdle1" src="images/hurdle1.png" />
+					<div id = "distance">0.0 m</div>
+					<div id = "krun_masking"></div>
+					<img id = "gameover" src="images/gameover.gif">
+					<img id = "readygo" src="images/readygo.gif">
+					<img id = "butterfly" src="images/butterfly.gif">
+					<img id = "donuts" src="images/donuts.png">
+
+				</div>
 
 				<!--preload-->
 				<div id = "loading">
@@ -75,7 +99,7 @@
 
 			<!--bottom_section-->
 			<div id="bottom_section_id" class="bottom_section">
-				<img id= "bottom_img" src="images/bottom.png" style="width: 100%; height: 100%;"/>
+				<img id= "bottom_img" src="images/bottom2.png" style="width: 100%; height: 100%;"/>
 				<img id = "hint_icon" src="images/hint_icon.png">
 			</div>
 		</section>
