--- a/room_second.html
+++ b/room_second.html
@@ -81,7 +81,7 @@
 					<div id = "distance">0.0 m</div>
 					<div id = "krun_masking"></div>
 					<img id = "gameover" src="images/gameover.gif">
-					<img id = "readygo" src="images/readygo.gif">
+					<img id = "readygo">
 					<img id = "butterfly" src="images/butterfly.gif">
 					<img id = "donuts" src="images/donuts.png">
 
