--- a/room_second.html
+++ b/room_second.html
@@ -100,6 +100,9 @@
 			<div id="bottom_section_id" class="bottom_section">
 				<img id= "bottom_img" src="images/bottom2.png" style="width: 100%; height: 100%;"/>
 				<img id = "hint_icon" src="images/hint_icon.png">
+				<img id = "puzzle_skip_icon" src="images/puzzle_skip_icon.png">
+				<img id = "password_skip_icon" src="images/password_skip_icon.png">
+				<img id = "password_icon" src="images/password_icon.png">
 			</div>
 		</section>
 
