--- a/room_first.html
+++ b/room_first.html
@@ -74,6 +74,8 @@
 			<div id="bottom_section_id" class="bottom_section">
 				<img id= "bottom_img" src="images/bottom.png" style="width: 100%; height: 100%;"/>
 				<img id = "hint_icon" src="images/hint_icon.png">
+				<img id = "password_skip_icon" src="images/password_skip_icon.png">
+				<img id = "password_icon2" src="images/password_icon2.png">
 			</div>
 		</section>
 
